cmake_minimum_required(VERSION 3.3)
project(buildlog_lasercutter_marlin)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    ArduinoAddons/Arduino_0.xx/Gen6/bootloaders/atmega644p/ATmegaBOOT.c
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/Arduino.h
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/binary.h
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/HardwareSerial.cpp
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/HardwareSerial.h
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/main.cpp
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/pins_arduino.c
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/pins_arduino.h
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/Print.cpp
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/Print.h
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/Stream.h
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/Tone.cpp
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/WCharacter.h
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/WConstants.h
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/WInterrupts.c
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/wiring.c
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/wiring.h
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/wiring_analog.c
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/wiring_digital.c
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/wiring_private.h
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/wiring_pulse.c
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/wiring_shift.c
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/WMath.cpp
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/WProgram.h
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/WString.cpp
    ArduinoAddons/Arduino_0.xx/Gen6/cores/arduino/WString.h
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/binary.h
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/HardwareSerial.cpp
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/HardwareSerial.h
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/main.cpp
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/main.cxx
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/pins_arduino.c
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/pins_arduino.h
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/Print.cpp
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/Print.h
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/Tone.cpp
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/WCharacter.h
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/WConstants.h
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/WInterrupts.c
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/wiring.c
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/wiring.h
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/wiring_analog.c
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/wiring_digital.c
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/wiring_private.h
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/wiring_pulse.c
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/wiring_serial.c
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/wiring_shift.c
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/WMath.cpp
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/WProgram.h
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/WString.cpp
    ArduinoAddons/Arduino_0.xx/Gen7/cores/arduino/WString.h
    ArduinoAddons/Arduino_0.xx/libraries/LiquidCrystal/LiquidCrystal.cpp
    ArduinoAddons/Arduino_0.xx/libraries/LiquidCrystal/LiquidCrystal.h
    ArduinoAddons/Arduino_0.xx/libraries/SPI/SPI.cpp
    ArduinoAddons/Arduino_0.xx/libraries/SPI/SPI.h
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/chessengine.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g.h
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_bitmap.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_circle.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_clip.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_com_api.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_com_api_16gr.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_com_arduino_common.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_com_arduino_fast_parallel.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_com_arduino_hw_spi.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_com_arduino_no_en_parallel.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_com_arduino_parallel.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_com_arduino_port_d_wr.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_com_arduino_ssd_i2c.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_com_arduino_st7920_hw_spi.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_com_arduino_st7920_spi.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_com_arduino_std_sw_spi.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_com_arduino_sw_spi.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_com_arduino_t6963.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_com_atmega_hw_spi.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_com_atmega_parallel.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_com_atmega_st7920_hw_spi.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_com_atmega_st7920_spi.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_com_atmega_sw_spi.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_com_i2c.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_com_io.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_com_null.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_cursor.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_delay.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_flipdisc_2x7.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_gprof.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_ili9325d_320x240.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_ks0108_128x64.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_lc7981_160x80.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_lc7981_240x128.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_lc7981_240x64.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_lc7981_320x64.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_null.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_pcd8544_84x48.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_pcf8812_96x65.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_sbn1661_122x32.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_ssd1306_128x32.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_ssd1306_128x64.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_ssd1309_128x64.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_ssd1322_nhd31oled_bw.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_ssd1322_nhd31oled_gr.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_ssd1325_nhd27oled_bw.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_ssd1325_nhd27oled_bw_new.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_ssd1325_nhd27oled_gr.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_ssd1325_nhd27oled_gr_new.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_ssd1327_96x96_gr.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_st7565_64128n.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_st7565_dogm128.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_st7565_dogm132.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_st7565_lm6059.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_st7565_lm6063.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_st7565_nhd_c12832.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_st7565_nhd_c12864.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_st7687_c144mvgd.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_st7920_128x64.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_st7920_192x32.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_st7920_202x32.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_t6963_128x64.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_t6963_240x128.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_t6963_240x64.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_tls8204_84x48.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_uc1610_dogxl160.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_uc1701_dogs102.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_dev_uc1701_mini12864.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_ellipse.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_font.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_font_data.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_line.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_ll_api.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_page.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_pb.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_pb14v1.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_pb16h1.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_pb16h2.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_pb16v1.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_pb16v2.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_pb32h1.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_pb8h1.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_pb8h1f.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_pb8h2.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_pb8h8.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_pb8v1.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_pb8v2.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_rect.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_rot.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_scale.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_state.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_u16toa.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_u8toa.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/utility/u8g_virtual_screen.c
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/U8glib.cpp
    ArduinoAddons/Arduino_0.xx/libraries/U8glib/U8glib.h
    ArduinoAddons/Arduino_0.xx/Sanguino/bootloaders/atmega1284p/boot.h
    ArduinoAddons/Arduino_0.xx/Sanguino/bootloaders/atmega1284p/optiboot.c
    ArduinoAddons/Arduino_0.xx/Sanguino/bootloaders/atmega1284p/pin_defs.h
    ArduinoAddons/Arduino_0.xx/Sanguino/bootloaders/atmega1284p/stk500.h
    ArduinoAddons/Arduino_0.xx/Sanguino/bootloaders/atmega644p/ATmegaBOOT.c
    ArduinoAddons/Arduino_0.xx/Sanguino/cores/arduino/binary.h
    ArduinoAddons/Arduino_0.xx/Sanguino/cores/arduino/HardwareSerial.cpp
    ArduinoAddons/Arduino_0.xx/Sanguino/cores/arduino/HardwareSerial.h
    ArduinoAddons/Arduino_0.xx/Sanguino/cores/arduino/main.cpp
    ArduinoAddons/Arduino_0.xx/Sanguino/cores/arduino/pins_arduino.c
    ArduinoAddons/Arduino_0.xx/Sanguino/cores/arduino/pins_arduino.h
    ArduinoAddons/Arduino_0.xx/Sanguino/cores/arduino/Print.cpp
    ArduinoAddons/Arduino_0.xx/Sanguino/cores/arduino/Print.h
    ArduinoAddons/Arduino_0.xx/Sanguino/cores/arduino/Stream.h
    ArduinoAddons/Arduino_0.xx/Sanguino/cores/arduino/Tone.cpp
    ArduinoAddons/Arduino_0.xx/Sanguino/cores/arduino/WCharacter.h
    ArduinoAddons/Arduino_0.xx/Sanguino/cores/arduino/WConstants.h
    ArduinoAddons/Arduino_0.xx/Sanguino/cores/arduino/WInterrupts.c
    ArduinoAddons/Arduino_0.xx/Sanguino/cores/arduino/wiring.c
    ArduinoAddons/Arduino_0.xx/Sanguino/cores/arduino/wiring.h
    ArduinoAddons/Arduino_0.xx/Sanguino/cores/arduino/wiring_analog.c
    ArduinoAddons/Arduino_0.xx/Sanguino/cores/arduino/wiring_digital.c
    ArduinoAddons/Arduino_0.xx/Sanguino/cores/arduino/wiring_private.h
    ArduinoAddons/Arduino_0.xx/Sanguino/cores/arduino/wiring_pulse.c
    ArduinoAddons/Arduino_0.xx/Sanguino/cores/arduino/wiring_shift.c
    ArduinoAddons/Arduino_0.xx/Sanguino/cores/arduino/WMath.cpp
    ArduinoAddons/Arduino_0.xx/Sanguino/cores/arduino/WProgram.h
    ArduinoAddons/Arduino_0.xx/Sanguino/cores/arduino/WString.cpp
    ArduinoAddons/Arduino_0.xx/Sanguino/cores/arduino/WString.h
    ArduinoAddons/Arduino_1.x.x/libraries/LiquidCrystal/LiquidCrystal.cpp
    ArduinoAddons/Arduino_1.x.x/libraries/LiquidCrystal/LiquidCrystal.h
    ArduinoAddons/Arduino_1.x.x/libraries/SPI/SPI.cpp
    ArduinoAddons/Arduino_1.x.x/libraries/SPI/SPI.h
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/chessengine.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g.h
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_bitmap.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_circle.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_clip.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_com_api.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_com_api_16gr.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_com_arduino_common.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_com_arduino_fast_parallel.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_com_arduino_hw_spi.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_com_arduino_no_en_parallel.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_com_arduino_parallel.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_com_arduino_port_d_wr.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_com_arduino_ssd_i2c.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_com_arduino_st7920_hw_spi.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_com_arduino_st7920_spi.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_com_arduino_std_sw_spi.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_com_arduino_sw_spi.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_com_arduino_t6963.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_com_atmega_hw_spi.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_com_atmega_parallel.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_com_atmega_st7920_hw_spi.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_com_atmega_st7920_spi.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_com_atmega_sw_spi.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_com_i2c.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_com_io.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_com_null.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_cursor.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_delay.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_flipdisc_2x7.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_gprof.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_ili9325d_320x240.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_ks0108_128x64.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_lc7981_160x80.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_lc7981_240x128.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_lc7981_240x64.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_lc7981_320x64.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_null.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_pcd8544_84x48.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_pcf8812_96x65.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_sbn1661_122x32.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_ssd1306_128x32.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_ssd1306_128x64.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_ssd1309_128x64.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_ssd1322_nhd31oled_bw.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_ssd1322_nhd31oled_gr.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_ssd1325_nhd27oled_bw.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_ssd1325_nhd27oled_bw_new.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_ssd1325_nhd27oled_gr.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_ssd1325_nhd27oled_gr_new.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_ssd1327_96x96_gr.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_st7565_64128n.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_st7565_dogm128.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_st7565_dogm132.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_st7565_lm6059.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_st7565_lm6063.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_st7565_nhd_c12832.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_st7565_nhd_c12864.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_st7687_c144mvgd.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_st7920_128x64.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_st7920_192x32.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_st7920_202x32.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_t6963_128x64.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_t6963_240x128.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_t6963_240x64.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_tls8204_84x48.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_uc1610_dogxl160.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_uc1701_dogs102.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_dev_uc1701_mini12864.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_ellipse.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_font.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_font_data.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_line.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_ll_api.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_page.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_pb.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_pb14v1.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_pb16h1.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_pb16h2.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_pb16v1.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_pb16v2.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_pb32h1.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_pb8h1.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_pb8h1f.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_pb8h2.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_pb8h8.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_pb8v1.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_pb8v2.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_rect.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_rot.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_scale.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_state.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_u16toa.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_u8toa.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/utility/u8g_virtual_screen.c
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/U8glib.cpp
    ArduinoAddons/Arduino_1.x.x/libraries/U8glib/U8glib.h
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/Arduino.h
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/binary.h
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/CDC.cpp
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/Client.h
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/HardwareSerial.cpp
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/HardwareSerial.h
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/HID.cpp
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/IPAddress.cpp
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/IPAddress.h
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/main.cpp
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/new.cpp
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/new.h
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/Platform.h
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/Print.cpp
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/Print.h
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/Printable.h
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/Server.h
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/Stream.cpp
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/Stream.h
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/Tone.cpp
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/Udp.h
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/USBAPI.h
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/USBCore.cpp
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/USBCore.h
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/USBDesc.h
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/WCharacter.h
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/WInterrupts.c
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/wiring.c
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/wiring_analog.c
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/wiring_digital.c
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/wiring_private.h
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/wiring_pulse.c
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/wiring_shift.c
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/WMath.cpp
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/WString.cpp
    ArduinoAddons/Arduino_1.x.x/rambo/cores/arduino/WString.h
    ArduinoAddons/Arduino_1.x.x/rambo/variants/standard/pins_arduino.h
    ArduinoAddons/Arduino_1.x.x/Sanguino/bootloaders/atmega/ATmegaBOOT_168.c
    ArduinoAddons/Arduino_1.x.x/Sanguino/bootloaders/atmega644p/ATmegaBOOT.c
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/Arduino.h
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/binary.h
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/CDC.cpp
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/Client.h
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/HardwareSerial.cpp
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/HardwareSerial.h
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/HID.cpp
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/IPAddress.cpp
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/IPAddress.h
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/main.cpp
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/new.cpp
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/new.h
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/Platform.h
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/Print.cpp
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/Print.h
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/Printable.h
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/Server.h
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/Stream.cpp
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/Stream.h
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/Tone.cpp
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/Udp.h
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/USBAPI.h
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/USBCore.cpp
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/USBCore.h
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/USBDesc.h
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/WCharacter.h
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/WInterrupts.c
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/wiring.c
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/wiring_analog.c
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/wiring_digital.c
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/wiring_private.h
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/wiring_pulse.c
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/wiring_shift.c
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/WMath.cpp
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/WString.cpp
    ArduinoAddons/Arduino_1.x.x/Sanguino/cores/arduino/WString.h
    ArduinoAddons/Arduino_1.x.x/Sanguino/variants/standard/pins_arduino.h
    Marlin/example_configurations/delta/Configuration.h
    Marlin/example_configurations/delta/Configuration_adv.h
    Marlin/Base64.cpp
    Marlin/Base64.h
    Marlin/cardreader.cpp
    Marlin/cardreader.h
    Marlin/Configuration-AMRI-ablative.h
    Marlin/Configuration-AMRI-SLS.h
    Marlin/Configuration.h
    Marlin/Configuration_adv.h
    Marlin/ConfigurationStore.cpp
    Marlin/ConfigurationStore.h
    Marlin/dogm_font_data_marlin.h
    Marlin/dogm_lcd_implementation.h
    Marlin/DOGMbitmaps.h
    Marlin/fastio.h
    Marlin/language.h
    Marlin/laser.cpp
    Marlin/laser.h
    Marlin/laserbitmaps.h
    Marlin/LiquidCrystalRus.cpp
    Marlin/LiquidCrystalRus.h
    Marlin/Marlin.h
    Marlin/Marlin_main.cpp
    Marlin/MarlinSerial.cpp
    Marlin/MarlinSerial.h
    Marlin/motion_control.cpp
    Marlin/motion_control.h
    Marlin/pins.h
    Marlin/planner.cpp
    Marlin/planner.h
    Marlin/Sd2Card.cpp
    Marlin/Sd2Card.h
    Marlin/Sd2PinMap.h
    Marlin/SdBaseFile.cpp
    Marlin/SdBaseFile.h
    Marlin/SdFatConfig.h
    Marlin/SdFatStructs.h
    Marlin/SdFatUtil.cpp
    Marlin/SdFatUtil.h
    Marlin/SdFile.cpp
    Marlin/SdFile.h
    Marlin/SdInfo.h
    Marlin/SdVolume.cpp
    Marlin/SdVolume.h
    Marlin/Servo.cpp
    Marlin/Servo.h
    Marlin/speed_lookuptable.h
    Marlin/stepper.cpp
    Marlin/stepper.h
    Marlin/temperature.cpp
    Marlin/temperature.h
    Marlin/thermistortables.h
    Marlin/ultralcd.cpp
    Marlin/ultralcd.h
    Marlin/ultralcd_implementation_hitachi_HD44780.h
    Marlin/ultralcd_st7920_u8glib_rrd.h
    Marlin/watchdog.cpp
    Marlin/watchdog.h)

add_executable(buildlog_lasercutter_marlin ${SOURCE_FILES})